Added formula for estimating miles from lat & long, set up MongoDB Atlas Connection and added 5 test airports, and added some temporary CSS

--- a/views/estimate.ejs
+++ b/views/estimate.ejs
@@ -6,7 +6,7 @@
 <h1 class="return-item"> <%= passNum %> </h1>
 
 <form action="/">
-    <button class="btn btn-dark again-btn">Estimate Again</button>
+    <button class="btn again-btn">ESTIMATE AGAIN</button>
 </form>
 
 </div>
