--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,26 +1,27 @@
 body {
-    background-color: gray;
+    background-color: #011936;
 }
 
 .charter-estimate {
     text-align: center;
     margin: 5% 0;
+    color: #82a3a1;
+    font-family: Montserrat;
+    letter-spacing: 15px;
 }
 
 .estimate-form {
-    width: 50%;
+    width: 30%;
     text-align: center;
     margin: auto;
 }
 
 .form-input {
     margin-bottom: 15px;
+    font-family: Montserrat;
+    letter-spacing: 5px;
 }
 
-.form-btn {
-    text-align: center;
-    margin: 2% auto;
-}
 
 .returned {
     text-align: center;
@@ -28,5 +29,17 @@ body {
 }
 
 .return-item {
+    color: #82a3a1;
+    font-family: Montserrat;
+    letter-spacing: 10px;
     margin-bottom: 2%;
+}
+
+.btn {
+    font-family: Montserrat;
+    letter-spacing: 5px;
+    color: white;
+    background-color: #82a3a1;
+    text-align: center;
+    margin: 2% auto;
 }
